# libglua

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  advanced_test.js  advanced_test.lua  basic_test.js  basic_test.lua  build_clean.bat  build_debug.bat  build_release.bat  example.lua
inc/: FileUtil.h  Glua.h  Glua.tcc  GluaCallable.h  GluaCallable.tcc  ICallable.h  exceptions.h  icallable.h  luacallable.h
inc/glua/: Exceptions.h  FileUtil.h  Glua.h  Glua.tcc  GluaBase.h  GluaBase.tcc  GluaBaseHelperTemplates.h  GluaBaseHelperTemplates.tcc  GluaCallable.h  GluaCallable.tcc  GluaLua.h  GluaManagedTypeStorage.h  ICallable.h  StackPosition.h  StackPosition.tcc  StringUtil.h
rewrite/: glua.hpp
rewrite/backends/: lua.hpp  spidermonkey.hpp
src/: FileUtil.cpp  Glua.cpp  GluaBase.cpp  GluaBaseHelperTemplates.cpp  GluaLua.cpp  ICallable.cpp  StackPosition.cpp  StringUtil.cpp  examples.cpp  file_util.cpp  icallable.cpp  luacallable.cpp  main.cpp
src/examples/: examples.cpp
src/glua/: any.hpp  generic_functor.hpp  glua.hpp  helpers.hpp  registration.hpp  result.hpp
src/glua/backends/: lua.hpp  spidermonkey.hpp
src/glua/backends/lua_impl/: any.hpp  class_registration_impl.hpp  converter_declarations.hpp  converter_definitions.hpp  generic_functor.hpp
src/glua/backends/spidermonkey_impl/: any.hpp  class_registration_impl.hpp  converter_declarations.hpp  converter_definitions.hpp  generic_functor.hpp
